--- a/src/main/resources/frontend/web.xml
+++ b/src/main/resources/frontend/web.xml
@@ -16,6 +16,8 @@
     </welcome-file-list>
 
 
+    <absolute-ordering/>
+
     <servlet>
         <servlet-name>dad-frontcontroller-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
