--- a/src/main/resources/frontend/web.xml
+++ b/src/main/resources/frontend/web.xml
@@ -21,6 +21,7 @@
     <servlet>
         <servlet-name>dad-frontcontroller-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
