--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,12 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
-group 'org.example'
+group 'com.home.controllers'
 version '1.0-SNAPSHOT'
+
+war {
+    enabled=true
+}
 
 repositories {
     mavenCentral()
@@ -19,7 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.postgresql:postgresql'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
 }
 
