--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
-group 'com.home.controllers'
+group 'com.home.controllers.SyncApplication'
 version '1.0-SNAPSHOT'
 
 war {
