--- a/src/main/resources/web.xml
+++ b/src/main/resources/web.xml
@@ -21,6 +21,10 @@
     <servlet>
         <servlet-name>dad-frontcontroller-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>configurationContext</param-name>
+            <param-value>dad-frontcontroller-servlet</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
