--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id 'java'
-    id 'war'
     id 'org.springframework.boot' version '2.5.0'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
+
+apply plugin: 'war'
 
 group 'com.home.controllers.SyncApplication'
 version '1.0-SNAPSHOT'
@@ -23,6 +24,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.postgresql:postgresql'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
     //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
 }
