--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.postgresql:postgresql'
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
     implementation 'org.springframework:spring-webmvc:5.3.15'
+    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
     //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
 }
