Changed the group for the class with the main method

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 apply plugin: 'war'
 
-group 'spring.love.calculator'
+group 'com.home.controllers.SyncApplication'
 version '1.0-SNAPSHOT'
 
 war {
