--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'jstl:jstl:1.2'
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'org.hibernate:hibernate-validator:7.0.2.Final'
+    implementation 'javax.mail:mail:1.5.0-b01'
+    implementation 'org.springframework:spring-context-support:5.3.16'
     //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
