--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -1,4 +1,4 @@
-mail.host = smtp.gmail.com
-mail.username = bonifacecollins1000@gmail.com
-mail.password = ccolaria1000
-mail.port = 587
+mail.host =
+mail.username =
+mail.password =
+mail.port =
